# poetry_translator

./: README.md  app.py  docker-compose.yml  poem.txt  pyproject.toml  rag_index.py  simple_translator.py
poems/: database.json  poem_black_sheep.json  poem_blake_nurses_song.json  poem_boys_girls.json  poem_crooked_man.json  poem_dr_foster.json  poem_elizabeth.json  poem_gotham.json  poem_humpty_dumpty.json  poem_i_was_walking.json  poem_if_all_the_seas.json  poem_old_woman.json  poem_queen.json  poem_riddle_strawberries.json  poem_robbin_bobbin.json  poem_shakespeare_sonnet33.json
rag_index/: default.pkl
